--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -12,6 +12,7 @@
     <meta name="description" content="Dalite NG">
     <link rel="icon" href="{% static 'peerinst/img/logo.png' %}">
     <link rel="stylesheet" href="{% static 'peerinst/css/main.css' %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Custom settings for local instance of dalite-ng -->
     {% include 'peerinst/custom-instance-head.html' %}
