show correct answer

--- a/peerinst/templates/peerinst/question_summary.html
+++ b/peerinst/templates/peerinst/question_summary.html
@@ -27,16 +27,16 @@
 <p>
   Correct answer(s):
     {% for answer in correct %}
-        <blockquote>{{ answer.text|safe }}</blockquote>
+      <blockquote>{{ answer.text|safe }}</blockquote>
     {% endfor %}
 </p>
 
 <p>
-  Expert rationales:
+  Expert rationale(s):
     {% for expert in experts %}
       {% for option in question.answerchoice_set.all %}
         {% if option.correct and expert.first_answer_choice == forloop.counter %}
-          <blockquote>{{ expert.rationale }}</blockquote>
+          <blockquote>{{ expert.rationale|safe }}</blockquote>
         {% endif %}
       {% endfor %}
     {% endfor %}
