--- a/peerinst/templates/peerinst/question_review_base.html
+++ b/peerinst/templates/peerinst/question_review_base.html
@@ -4,7 +4,15 @@
 {% block answers %}
 <ul id="answer-choices">
   {% for label, choice in answer_choices %}
-  <li class="{% if label == first_choice_label %}first-choice{% endif %}{% if label == second_choice_label %} second-choice{% endif %}">{{ label }}. {{ choice|safe }}</li>
+  <li class="{% if label == first_choice_label %}first-choice{% endif %}{% if label == second_choice_label %} second-choice{% endif %}">{{ label }}. {{ choice|safe }}
+    {% if first_choice_label and second_choice_label %}
+      {% for c in correct %}
+        {% if choice == c.text %}
+          <<< CORRECT ANSWER
+        {% endif %}
+      {% endfor %}
+    {% endif %}
+  </li>
   {% endfor %}
 </ul>
 <div id="your-answer">
