--- a/peerinst/templates/peerinst/question_review.html
+++ b/peerinst/templates/peerinst/question_review.html
@@ -12,7 +12,7 @@
   {% else %}
   {% blocktrans %}
   Consider the problem again, noting the rationales below that have been provided by other
-  students.  They may, or may not, cause you to reconsider your answer.  Read them, and select your
+  students.  They may, or may not, cause you to reconsider your answer.  Read them and select your
   final answer.
   {% endblocktrans %}
   {% endif %}
@@ -24,7 +24,7 @@
 <div class="rationales">
   {% for second_answer_choice, rationale_choice in form.rationale_groups %}
   <div class="rationale" id="rationales-{{ forloop.counter0 }}">
-    <div class="rationale-choice">{{ second_answer_choice }}</div>
+    <div class="rationale-choice">{{ second_answer_choice }}.</div>
     <div class="rationale-text-container">{{ rationale_choice.errors }} {{ rationale_choice }}</div>
   </div>
   {% endfor %}
