--- a/peerinst/templates/peerinst/question_review_base.html
+++ b/peerinst/templates/peerinst/question_review_base.html
@@ -6,11 +6,13 @@
   {% for label, choice in answer_choices %}
   <li class="{% if label == first_choice_label %}first-choice{% endif %}{% if label == second_choice_label %} second-choice{% endif %}">{{ label }}. {{ choice|safe }}
     {% if first_choice_label and second_choice_label %}
-      {% for c in correct %}
-        {% if choice == c.text %}
-          <<< CORRECT ANSWER
-        {% endif %}
-      {% endfor %}
+      {% if label == second_choice_label %}
+        {% for c in correct %}
+          {% if choice == c.text %}
+            <i id="check" class="material-icons" style="-webkit-transform: translateY(5px);font-size:16pt;">check</i>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
     {% endif %}
   </li>
   {% endfor %}
