--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -36,6 +36,7 @@
       </div>
     </header>
 
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <div class="site-content">
       {% block body %}{% endblock %}
     </div>
