fix bug when grading answer for empty answerchoice strings

--- a/peerinst/templates/peerinst/question_review_base.html
+++ b/peerinst/templates/peerinst/question_review_base.html
@@ -8,7 +8,7 @@
     {% if first_choice_label and second_choice_label %}
       {% if label == second_choice_label %}
         {% for c in question.answerchoice_set.all %}
-          {% if choice == c.text %}
+          {% if forloop.counter == forloop.parentloop.counter %}
             {% if c.correct %}
               <i id="check" class="material-icons" style="-webkit-transform: translateY(5px);font-size:16pt;">check</i>
             {% else %}
